--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,13 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h1>Harjit's All Time Favourite Movies</h1>
+<h2>My top 5 movies of all time</h2>
+<hr>
+<h3>The Prestige</h3>
+<p>The acting performances of Christian Bale and Hugh Jackman are wonderful, as well as the jumbled story telling, very curious.</p>
+<h3>Inglorious Basterds</h3>
+<p>Loved the style of film making, the alternate take on history, and amazing acting performances</p>
+<h3>The Dark Knight</h3>
+<p>Again, one of the greatest performances ever by Heath Ledger, and the storytelling is amazing.</p>
+<h3>Interstellar</h3>
+<p>A visually stunning movie with a thought-provoking story and an incredible score by Hans Zimmer.</p>
+<h3>Inception</h3>
+<p>A mind-bending thriller with a complex narrative and outstanding performances by the cast.</p>
